# adventofcode

./: pyproject.toml
src/12_2023/scripts/: 1_trebuchet.py
