[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Noé Sautel <noesautel@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
